welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
}}  recule(6)
    ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (y <- 1 to 6){
         ^